added more details in the explanatory text

--- a/find_picture_in_picture/find_iter_picture-2.ipynb
+++ b/find_picture_in_picture/find_iter_picture-2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In order to identify important layout elements or structures in a document, pictures can be compared directly and smaller images can be detected in larger pictures. This is done in this example in order to identify tables in a newspaper. \n",
     "\n",
-    "In this notebook, we assume that not each page contains the selected type of table. Therefore a pre-selection is made by looping over all pages and checking whether there are any matches. The result of this pre-selection sensitively depends on the threshold used for defining a match. This threshold is a trade-off between finding all matches and finding false positives. It can be changed using the 'init_thrs'-parameter (see below).\n",
+    "In this notebook, we assume that not each issue contains the selected type of table. Therefore a pre-selection is made by looping over all pages and all issues and checking whether there are any matches. The result of this pre-selection sensitively depends on the threshold used for defining a match. This threshold is a trade-off between finding all matches and finding false positives. It can be changed using the 'init_thrs'-parameter (see below).\n",
     "\n",
     "Installation instruction for conda environment:\n",
     "\n",
@@ -706,7 +706,7 @@
    "source": [
     "## loop over whole year\n",
     "\n",
-    "Now we repeat this for several journal pages. The trade-off between finding all tables and finding only correct matches can be tuned using the 'init_thrs'-parameter."
+    "Now we loop over all issues of the whole year. Not every issue contains the specified table, so we have to make a pre-selection. The trade-off between finding all tables and finding only correct matches can be tuned using the 'init_thrs'-parameter."
    ]
   },
   {
@@ -974,6 +974,7 @@
     }
    ],
    "source": [
+    "# pre-selection of issues and pages containing the specified table\n",
     "dir_list = []\n",
     "table_list  = []\n",
     "for dirname in os.listdir(image_dir):\n",
